[MIK-1721] Fix [DEV][WEB][Top page] List Cast is misaligned at Top Page

--- a/public/assets/web/css/custom.css
+++ b/public/assets/web/css/custom.css
@@ -3525,3 +3525,28 @@ div.user-data span.total-point-cast{
 #gf3 .selectbox select option:selected {
   color: #222222;
 }
+
+.slide-image {
+  position: relative;
+}
+
+.slide-image:before {
+  content: " ";
+  display: block;
+
+  position: absolute;
+  top: 0px;
+  left: 0;
+  height: calc(100% + 10px);
+  width: 100%;
+  background-color: #FFFFFF;
+  background-image: url("../images/gm1/ic-user-avatar.svg") !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.img-avatar-user {
+  background-image: url("../images/gm1/ic_default_avatar@3x.png") !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
